mojoshader_lexer.c
/* Generated by re2c 0.12.1 on Thu Feb 12 13:52:20 2009 */
#line 1 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
/**
 * MojoShader; generate shader programs from bytecode of compiled
 *  Direct3D shaders.
 *
 * Please see the file LICENSE.txt in the source's root directory.
 *
 *  This file written by Ryan C. Gordon.
 */

// This was originally based on examples/pp-c.re from re2c: http://re2c.org/
//   re2c is public domain code.
//
// You build mojoshader_lexer_preprocessor.c from the .re file with re2c...
// re2c -is -o mojoshader_lexer_preprocessor.c mojoshader_lexer_preprocessor.re
//
// Changes to the lexer are done to the .re file, not the C code!
//
// Please note that this isn't a perfect C lexer, since it is used for both
//  HLSL and shader assembly language, and follows the quirks of Microsoft's
//  tools.

#define __MOJOSHADER_INTERNAL__ 1
#include "mojoshader_internal.h"

typedef unsigned char uchar;

#define RET(t) do { update_state(s, cursor, token); return t; } while (0)
#define YYCTYPE uchar
#define YYCURSOR cursor
#define YYLIMIT limit
#define YYMARKER s->lexer_marker
#define YYFILL(n) { if ((n) == 1) { RET(TOKEN_EOI); } }

static void update_state(IncludeState *s, const uchar *cur, const uchar *tok)
{
    s->bytes_left -= (unsigned int) (cur - ((const uchar *) s->source));
    s->source = (const char *) cur;
    s->token = (const char *) tok;
} // update_state

Token preprocessor_internal_lexer(IncludeState *s)
{
    const uchar *cursor = (const uchar *) s->source;
    const uchar *token;
    const uchar *limit = cursor + s->bytes_left;
    int saw_newline = 0;

scanner_loop:
    token = cursor;

    if (YYLIMIT == YYCURSOR)
        RET(TOKEN_EOI);

#line 67 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"



#line 61 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;

	if((YYLIMIT - YYCURSOR) < 8) YYFILL(8);
	yych = *YYCURSOR;
	switch(yych) {
	case 0x09:
	case 0x0B:
	case 0x0C:
	case ' ':	goto yy62;
	case 0x0A:	goto yy64;
	case 0x0D:	goto yy66;
	case '!':	goto yy34;
	case '"':	goto yy13;
	case '#':	goto yy36;
	case '%':	goto yy24;
	case '&':	goto yy28;
	case '\'':	goto yy9;
	case '(':	goto yy38;
	case ')':	goto yy40;
	case '*':	goto yy22;
	case '+':	goto yy18;
	case ',':	goto yy46;
	case '-':	goto yy20;
	case '.':	goto yy11;
	case '/':	goto yy2;
	case '0':	goto yy6;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy8;
	case ':':	goto yy50;
	case ';':	goto yy52;
	case '<':	goto yy16;
	case '=':	goto yy32;
	case '>':	goto yy14;
	case '?':	goto yy58;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy4;
	case '[':	goto yy42;
	case '\\':	goto yy60;
	case ']':	goto yy44;
	case '^':	goto yy26;
	case '{':	goto yy54;
	case '|':	goto yy30;
	case '}':	goto yy56;
	case '~':	goto yy48;
	default:	goto yy67;
	}
yy2:
	++YYCURSOR;
	if((yych = *YYCURSOR) <= '.') {
		if(yych == '*') goto yy230;
	} else {
		if(yych <= '/') goto yy228;
		if(yych == '=') goto yy226;
	}
#line 118 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET('/'); }
#line 178 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy4:
	++YYCURSOR;
	yych = *YYCURSOR;
	goto yy225;
yy5:
#line 73 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_IDENTIFIER); }
#line 186 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy6:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if(yych <= 'X') {
		if(yych <= 'T') {
			if(yych == 'L') goto yy200;
			goto yy216;
		} else {
			if(yych <= 'U') goto yy200;
			if(yych <= 'W') goto yy216;
			goto yy217;
		}
	} else {
		if(yych <= 't') {
			if(yych == 'l') goto yy200;
			goto yy216;
		} else {
			if(yych <= 'u') goto yy200;
			if(yych == 'x') goto yy217;
			goto yy216;
		}
	}
yy7:
#line 77 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_INT_LITERAL); }
#line 212 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy8:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	goto yy198;
yy9:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	if(yych != 0x0A) goto yy188;
yy10:
#line 147 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ printf("bad char\n"); goto scanner_loop; }
#line 224 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy11:
	++YYCURSOR;
	if((yych = *YYCURSOR) <= '/') goto yy12;
	if(yych <= '9') goto yy179;
yy12:
#line 110 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET('.'); }
#line 232 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy13:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	if(yych == 0x0A) goto yy10;
	goto yy170;
yy14:
	++YYCURSOR;
	if((yych = *YYCURSOR) <= '<') goto yy15;
	if(yych <= '=') goto yy163;
	if(yych <= '>') goto yy165;
yy15:
#line 121 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET('>'); }
#line 246 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy16:
	++YYCURSOR;
	if((yych = *YYCURSOR) <= ';') goto yy17;
	if(yych <= '<') goto yy159;
	if(yych <= '=') goto yy157;
yy17:
#line 120 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET('<'); }
#line 255 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy18:
	++YYCURSOR;
	if((yych = *YYCURSOR) == '+') goto yy153;
	if(yych == '=') goto yy155;
#line 116 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET('+'); }
#line 262 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy20:
	++YYCURSOR;
	if((yych = *YYCURSOR) == '-') goto yy149;
	if(yych == '=') goto yy151;
#line 115 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET('-'); }
#line 269 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy22:
	++YYCURSOR;
	if((yych = *YYCURSOR) == '=') goto yy147;
#line 117 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET('*'); }
#line 275 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy24:
	++YYCURSOR;
	if((yych = *YYCURSOR) == '=') goto yy145;
#line 119 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET('%'); }
#line 281 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy26:
	++YYCURSOR;
	if((yych = *YYCURSOR) == '=') goto yy143;
#line 122 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET('^'); }
#line 287 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy28:
	++YYCURSOR;
	if((yych = *YYCURSOR) == '&') goto yy139;
	if(yych == '=') goto yy141;
#line 112 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET('&'); }
#line 294 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy30:
	++YYCURSOR;
	if((yych = *YYCURSOR) == '=') goto yy137;
	if(yych == '|') goto yy135;
#line 123 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET('|'); }
#line 301 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy32:
	++YYCURSOR;
	if((yych = *YYCURSOR) == '=') goto yy133;
#line 128 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET('='); }
#line 307 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy34:
	++YYCURSOR;
	if((yych = *YYCURSOR) == '=') goto yy131;
#line 113 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET('!'); }
#line 313 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy36:
	yyaccept = 2;
	yych = *(YYMARKER = ++YYCURSOR);
	if(yych <= 'c') {
		if(yych <= 0x1F) {
			if(yych == 0x09) goto yy72;
		} else {
			if(yych <= ' ') goto yy72;
			if(yych == '#') goto yy79;
		}
	} else {
		if(yych <= 'k') {
			if(yych <= 'e') goto yy72;
			if(yych == 'i') goto yy72;
		} else {
			if(yych <= 'l') goto yy72;
			if(yych == 'u') goto yy72;
		}
	}
yy37:
#line 131 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET('#'); }
#line 336 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy38:
	++YYCURSOR;
#line 106 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET('('); }
#line 341 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy40:
	++YYCURSOR;
#line 107 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(')'); }
#line 346 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy42:
	++YYCURSOR;
#line 108 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET('['); }
#line 351 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy44:
	++YYCURSOR;
#line 109 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(']'); }
#line 356 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy46:
	++YYCURSOR;
#line 111 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(','); }
#line 361 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy48:
	++YYCURSOR;
#line 114 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET('~'); }
#line 366 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy50:
	++YYCURSOR;
#line 124 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(':'); }
#line 371 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy52:
	++YYCURSOR;
#line 125 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(';'); }
#line 376 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy54:
	++YYCURSOR;
#line 126 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET('{'); }
#line 381 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy56:
	++YYCURSOR;
#line 127 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET('}'); }
#line 386 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy58:
	++YYCURSOR;
#line 129 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET('?'); }
#line 391 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy60:
	++YYCURSOR;
#line 130 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET('\\'); }
#line 396 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy62:
	++YYCURSOR;
	yych = *YYCURSOR;
	goto yy70;
yy63:
#line 145 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ goto scanner_loop; }
#line 404 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy64:
	++YYCURSOR;
yy65:
#line 146 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ s->line++; RET('\n'); }
#line 410 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy66:
	yych = *++YYCURSOR;
	if(yych == 0x0A) goto yy68;
	goto yy65;
yy67:
	yych = *++YYCURSOR;
	goto yy10;
yy68:
	yych = *++YYCURSOR;
	goto yy65;
yy69:
	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy70:
	if(yych <= 0x0A) {
		if(yych == 0x09) goto yy69;
		goto yy63;
	} else {
		if(yych <= 0x0C) goto yy69;
		if(yych == ' ') goto yy69;
		goto yy63;
	}
yy71:
	++YYCURSOR;
	if((YYLIMIT - YYCURSOR) < 7) YYFILL(7);
	yych = *YYCURSOR;
yy72:
	if(yych <= 'e') {
		if(yych <= 0x1F) {
			if(yych == 0x09) goto yy71;
		} else {
			if(yych <= ' ') goto yy71;
			if(yych <= 'c') goto yy73;
			if(yych <= 'd') goto yy77;
			goto yy74;
		}
	} else {
		if(yych <= 'k') {
			if(yych == 'i') goto yy75;
		} else {
			if(yych <= 'l') goto yy78;
			if(yych == 'u') goto yy76;
		}
	}
yy73:
	YYCURSOR = YYMARKER;
	if(yyaccept <= 2) {
		if(yyaccept <= 1) {
			if(yyaccept <= 0) {
				goto yy7;
			} else {
				goto yy10;
			}
		} else {
			goto yy37;
		}
	} else {
		if(yyaccept <= 3) {
			goto yy98;
		} else {
			goto yy181;
		}
	}
yy74:
	yych = *++YYCURSOR;
	if(yych <= 'm') {
		if(yych == 'l') goto yy114;
		goto yy73;
	} else {
		if(yych <= 'n') goto yy115;
		if(yych == 'r') goto yy116;
		goto yy73;
	}
yy75:
	yych = *++YYCURSOR;
	if(yych == 'f') goto yy97;
	if(yych == 'n') goto yy96;
	goto yy73;
yy76:
	yych = *++YYCURSOR;
	if(yych == 'n') goto yy91;
	goto yy73;
yy77:
	yych = *++YYCURSOR;
	if(yych == 'e') goto yy85;
	goto yy73;
yy78:
	yych = *++YYCURSOR;
	if(yych == 'i') goto yy81;
	goto yy73;
yy79:
	++YYCURSOR;
#line 105 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_HASHHASH); }
#line 506 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy81:
	yych = *++YYCURSOR;
	if(yych != 'n') goto yy73;
	yych = *++YYCURSOR;
	if(yych != 'e') goto yy73;
	++YYCURSOR;
#line 134 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_PP_LINE); }
#line 515 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy85:
	yych = *++YYCURSOR;
	if(yych != 'f') goto yy73;
	yych = *++YYCURSOR;
	if(yych != 'i') goto yy73;
	yych = *++YYCURSOR;
	if(yych != 'n') goto yy73;
	yych = *++YYCURSOR;
	if(yych != 'e') goto yy73;
	++YYCURSOR;
#line 135 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_PP_DEFINE); }
#line 528 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy91:
	yych = *++YYCURSOR;
	if(yych != 'd') goto yy73;
	yych = *++YYCURSOR;
	if(yych != 'e') goto yy73;
	yych = *++YYCURSOR;
	if(yych != 'f') goto yy73;
	++YYCURSOR;
#line 136 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_PP_UNDEF); }
#line 539 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy96:
	yych = *++YYCURSOR;
	if(yych == 'c') goto yy108;
	goto yy73;
yy97:
	yyaccept = 3;
	yych = *(YYMARKER = ++YYCURSOR);
	if(yych == 'd') goto yy100;
	if(yych == 'n') goto yy99;
yy98:
#line 137 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_PP_IF); }
#line 552 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy99:
	yych = *++YYCURSOR;
	if(yych == 'd') goto yy104;
	goto yy73;
yy100:
	yych = *++YYCURSOR;
	if(yych != 'e') goto yy73;
	yych = *++YYCURSOR;
	if(yych != 'f') goto yy73;
	++YYCURSOR;
#line 138 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_PP_IFDEF); }
#line 565 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy104:
	yych = *++YYCURSOR;
	if(yych != 'e') goto yy73;
	yych = *++YYCURSOR;
	if(yych != 'f') goto yy73;
	++YYCURSOR;
#line 139 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_PP_IFNDEF); }
#line 574 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy108:
	yych = *++YYCURSOR;
	if(yych != 'l') goto yy73;
	yych = *++YYCURSOR;
	if(yych != 'u') goto yy73;
	yych = *++YYCURSOR;
	if(yych != 'd') goto yy73;
	yych = *++YYCURSOR;
	if(yych != 'e') goto yy73;
	++YYCURSOR;
#line 133 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_PP_INCLUDE); }
#line 587 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy114:
	yych = *++YYCURSOR;
	if(yych == 'i') goto yy125;
	if(yych == 's') goto yy126;
	goto yy73;
yy115:
	yych = *++YYCURSOR;
	if(yych == 'd') goto yy121;
	goto yy73;
yy116:
	yych = *++YYCURSOR;
	if(yych != 'r') goto yy73;
	yych = *++YYCURSOR;
	if(yych != 'o') goto yy73;
	yych = *++YYCURSOR;
	if(yych != 'r') goto yy73;
	++YYCURSOR;
#line 143 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_PP_ERROR); }
#line 607 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy121:
	yych = *++YYCURSOR;
	if(yych != 'i') goto yy73;
	yych = *++YYCURSOR;
	if(yych != 'f') goto yy73;
	++YYCURSOR;
#line 142 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_PP_ENDIF); }
#line 616 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy125:
	yych = *++YYCURSOR;
	if(yych == 'f') goto yy129;
	goto yy73;
yy126:
	yych = *++YYCURSOR;
	if(yych != 'e') goto yy73;
	++YYCURSOR;
#line 140 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_PP_ELSE); }
#line 627 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy129:
	++YYCURSOR;
#line 141 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_PP_ELIF); }
#line 632 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy131:
	++YYCURSOR;
#line 104 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_NEQ); }
#line 637 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy133:
	++YYCURSOR;
#line 103 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_EQL); }
#line 642 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy135:
	++YYCURSOR;
#line 100 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_OROR); }
#line 647 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy137:
	++YYCURSOR;
#line 94 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_ORASSIGN); }
#line 652 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy139:
	++YYCURSOR;
#line 99 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_ANDAND); }
#line 657 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy141:
	++YYCURSOR;
#line 93 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_ANDASSIGN); }
#line 662 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy143:
	++YYCURSOR;
#line 92 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_XORASSIGN); }
#line 667 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy145:
	++YYCURSOR;
#line 91 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_MODASSIGN); }
#line 672 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy147:
	++YYCURSOR;
#line 89 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_MULTASSIGN); }
#line 677 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy149:
	++YYCURSOR;
#line 96 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_DECREMENT); }
#line 682 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy151:
	++YYCURSOR;
#line 88 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_SUBASSIGN); }
#line 687 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy153:
	++YYCURSOR;
#line 95 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_INCREMENT); }
#line 692 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy155:
	++YYCURSOR;
#line 87 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_ADDASSIGN); }
#line 697 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy157:
	++YYCURSOR;
#line 101 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_LEQ); }
#line 702 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy159:
	++YYCURSOR;
	if((yych = *YYCURSOR) == '=') goto yy161;
#line 98 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_LSHIFT); }
#line 708 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy161:
	++YYCURSOR;
#line 86 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_LSHIFTASSIGN); }
#line 713 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy163:
	++YYCURSOR;
#line 102 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_GEQ); }
#line 718 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy165:
	++YYCURSOR;
	if((yych = *YYCURSOR) == '=') goto yy167;
#line 97 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_RSHIFT); }
#line 724 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy167:
	++YYCURSOR;
#line 85 "/home/icculus/projects/mojoshader/mojoshader_lexer.re"
	{ RET(TOKEN_RSHIFTASSIGN); }
#line 729 "/home/icculus/projects/mojoshader/mojoshader_lexer.c"
yy169:
	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
yy170:
	if(yych <= '!') {
		if(yych == 0x0A) goto yy73;
		goto yy169;
	} else {
		if(yych <= '"') goto yy172;
		if(yych != '\\') goto yy169;
	}
yy171:
	++YYCURSOR;
	if(YYLIMIT == YYCURSOR) YYFILL(1);
	yych = *YYCURSOR;
